--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -3,9 +3,10 @@
 
 .nav {
   @include flex(row, space-between, center);
-  height: 7vh;
+  height: 5rem;
   border-bottom: 0.5px solid #dbdbdb;
   padding: 0px 30px;
+  // position: fixed;
 
   &-child {
     width: 33%;
@@ -15,6 +16,10 @@
     @include flex(row, flex-start, center);
     font-size: larger;
     color: #2c3d4f;
+
+    a:visited {
+      color: #2c3d4f;
+    }
   }
 
   &__title {
