--- a/src/pages/Content/Content.scss
+++ b/src/pages/Content/Content.scss
@@ -1,7 +1,7 @@
 @import './../../styles/common';
 @import './../../styles/reset';
 
-.main {
+.content {
   @include flex(column, center, flex-start);
   position: relative;
   top: 10rem;
